--- a/package.json
+++ b/package.json
@@ -1,32 +1,38 @@
 {
-  "name": "hardhat-thor-ts-plugin",
-  "version": "0.1.0",
-  "description": "Hardhat plugin for the VeChain Thor protocol written in Typescript",
-  "main": "dist/index.ts",
-  "scripts": {
-    "build": "rm -rf dist && tsc -p ."
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/zzGHzz/hardhat-thor-ts-plugin.git"
-  },
-  "author": "Peter Zhou",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/zzGHzz/hardhat-thor-ts-plugin/issues"
-  },
-  "homepage": "https://github.com/zzGHzz/hardhat-thor-ts-plugin#readme",
-  "devDependencies": {
-    "@types/chai": "^4.3.1",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "^17.0.31",
-    "chai": "^4.3.6",
-    "hardhat": "^2.0.0",
-    "mocha": "^10.0.0",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.4"
-  },
-  "dependencies": {
-    "web3-providers-connex": "^0.6.1"
-  }
+	"name": "hardhat-thor-ts-plugin",
+	"version": "0.1.0",
+	"description": "Hardhat plugin for the VeChain Thor protocol written in Typescript",
+	"main": "dist/index.js",
+	"scripts": {
+		"build": "rm -rf dist && tsc -p .",
+		"test": "mocha --no-timeouts test/index.ts" 
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/zzGHzz/hardhat-thor-ts-plugin.git"
+	},
+	"author": "Peter Zhou",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/zzGHzz/hardhat-thor-ts-plugin/issues"
+	},
+	"homepage": "https://github.com/zzGHzz/hardhat-thor-ts-plugin#readme",
+	"devDependencies": {
+		"@nomiclabs/hardhat-ethers": "^2.0.6",
+		"@types/chai": "^4.3.1",
+		"@types/mocha": "^9.1.1",
+		"@types/node": "^17.0.31",
+		"chai": "^4.3.6",
+		"hardhat": "^2.0.0",
+		"mocha": "^10.0.0",
+		"thor-builtin": "^2.0.2",
+		"ts-node": "^10.7.0",
+		"typescript": "^4.6.4"
+	},
+	"peerDependencies": {
+		"@vechain/connex-driver": "^2.0.10",
+		"@vechain/connex-framework": "^2.0.10",
+		"ethers": "^5.6.5",
+		"web3-providers-connex": "^0.7.3"
+	}
 }
