--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,24 @@
 {
 	"compilerOptions": {
-	  "target": "ES2017",
-	  "module": "commonjs",
-	  "declaration": true,
-	  "declarationMap": true,
-	  "sourceMap": true,
-	  "outDir": "./dist",
-	  "strict": true,
-	  "rootDirs": ["./src", "./test"],
-	  "esModuleInterop": true
+		"target": "ES2016",
+		"module": "commonjs",
+		"declaration": true,
+		"declarationMap": true,
+		"sourceMap": true,
+		"outDir": "./dist",
+		"strict": true,
+		"rootDirs": [
+			"./src",
+			"./test"
+		],
+		"esModuleInterop": true
 	},
-	"exclude": ["dist", "node_modules"],
+	"exclude": [
+		"dist",
+		"node_modules"
+	],
 	"include": [
-	  "./test",
-	  "./src"
+		"./test",
+		"./src"
 	]
-  }
-  
+}
